==> RT-Thread/rt-thread/bsp/hk32/libraries/rt_drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define PIN_NUM(port, no)           (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin)               ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin)                 ((uint8_t)((pin) & 0xFu))
#define PIN_HKPORTSOURCE(pin)       ((uint8_t)(((pin) & 0xF0u) >> 4))
#define PIN_HKPINSOURCE(pin)        ((uint8_t)((pin) & 0xFu))
#define PIN_HKPORT(pin)             ((GPIO_TypeDef *)(GPIOA_BASE + (0x400u * PIN_PORT(pin))))
#define PIN_HKPIN(pin)              ((uint16_t)(1u << PIN_NO(pin)))
    #define __HK32_PORT_MAX 12u
    #define __HK32_PORT_MAX 11u
    #define __HK32_PORT_MAX 10u
    #define __HK32_PORT_MAX 9u
    #define __HK32_PORT_MAX 8u
    #define __HK32_PORT_MAX 7u
    #define __HK32_PORT_MAX 6u
    #define __HK32_PORT_MAX 5u
    #define __HK32_PORT_MAX 4u
    #define __HK32_PORT_MAX 3u
    #define __HK32_PORT_MAX 2u
    #define __HK32_PORT_MAX 1u
    #define __HK32_PORT_MAX 0u
#define PIN_HKPORT_MAX __HK32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

int rt_hw_pin_init(void)
{
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
#ifdef GPIOA
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
#endif
#ifdef GPIOB
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE);
#endif
#ifdef GPIOC
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOC, ENABLE);
#endif
#ifdef GPIOD
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOD, ENABLE);
#endif
#ifdef GPIOE
    RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_GPIOE, ENABLE);
#endif
#ifdef GPIOF
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOF, ENABLE);
#endif
#ifdef GPIOG
    RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_GPIOG, ENABLE);
#endif

    return rt_device_pin_register("pin", &_hk32_pin_ops, RT_NULL);
}
